lang/tests/compile_fail/event_unsupported_string.rs
use quasar_lang::prelude::*;

#[event(discriminator = [1])]
pub struct Bad {
    pub x: String,
}

fn main() {}
