lang/tests/compile_fail/event_unsupported_string.stderr
error: unsupported event field type `String`; only primitive integers, bool, and Address are supported
 --> tests/compile_fail/event_unsupported_string.rs:5:12
  |
5 |     pub x: String,
  |            ^^^^^^
